--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "dependencies": {
-    "@create-figma-plugin/ui": "^1.9.2",
-    "@create-figma-plugin/utilities": "^1.9.2",
+    "@create-figma-plugin/ui": "^3",
+    "@create-figma-plugin/utilities": "^3",
     "preact": "^10.7.2"
   },
   "devDependencies": {
-    "@create-figma-plugin/build": "^1.9.2",
-    "@create-figma-plugin/tsconfig": "^1.9.2",
-    "@figma/plugin-typings": "1.45.0",
-    "typescript": "^4"
+    "@create-figma-plugin/build": "^3",
+    "@create-figma-plugin/tsconfig": "^3",
+    "@figma/plugin-typings": "^1.45.0",
+    "typescript": "^5"
   },
   "scripts": {
     "build": "build-figma-plugin --typecheck --minify",
